--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
   },
   "dependencies": {
     "@grammyjs/storage-file": "^2.0.0",
+    "@loskir/grammy-views": "^0.3.0",
     "dotenv": "^10.0.0",
-    "grammy": "^1.8.3",
-    "grammy-views": "file:../grammy-views"
+    "grammy": "^1.11.0"
   },
   "devDependencies": {
     "@types/node": "16",
